src/main/java/com/relogiclabs/jschema/internal/antlr/SchemaParser.java
package com.relogiclabs.jschema.internal.antlr;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SchemaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		S_TITLE=1, S_VERSION=2, S_IMPORT=3, S_PRAGMA=4, S_DEFINE=5, S_SCHEMA=6,
		S_SCRIPT=7, S_TRUE=8, S_FALSE=9, S_NULL=10, S_COLON=11, S_COMMA=12, S_STAR=13,
		S_LBRACE=14, S_RBRACE=15, S_LBRACKET=16, S_RBRACKET=17, S_LPAREN=18, S_RPAREN=19,
		S_OPTIONAL=20, S_UNDEFINED=21, S_GENERAL_ID=22, S_ALIAS=23, S_DATATYPE=24,
		S_FUNCTION=25, S_RECEIVER=26, S_STRING=27, S_INTEGER=28, S_FLOAT=29, S_DOUBLE=30,
		S_WHITE_SPACE=31, S_BLOCK_COMMENT=32, S_LINE_COMMENT=33, G_VAR=34, G_IF=35,
		G_ELSE=36, G_WHILE=37, G_FOR=38, G_FOREACH=39, G_IN=40, G_BREAK=41, G_CONSTRAINT=42,
		G_TARGET=43, G_CALLER=44, G_SUBROUTINE=45, G_TRYOF=46, G_THROW=47, G_FUNCTION=48,
		G_RETURN=49, G_FUTURE=50, G_TRUE=51, G_FALSE=52, G_NULL=53, G_UNDEFINED=54,
		G_THIS=55, G_NEW=56, G_CONTINUE=57, G_DO=58, G_CONST=59, G_SWITCH=60,
		G_CASE=61, G_IMPORT=62, G_CLASS=63, G_SUPER=64, G_DEFAULT=65, G_NOT=66,
		G_INTEGER=67, G_DOUBLE=68, G_STRING=69, G_IDENTIFIER=70, G_LBRACE=71,
		G_RBRACE=72, G_LBRACKET=73, G_RBRACKET=74, G_LPAREN=75, G_RPAREN=76, G_SEMI=77,
		G_COMMA=78, G_DOT=79, G_COLON=80, G_RANGE=81, G_ELLIPSIS=82, G_ASSIGN=83,
		G_INC=84, G_DEC=85, G_PLUS=86, G_MINUS=87, G_MUL=88, G_DIV=89, G_MOD=90,
		G_GT=91, G_LT=92, G_LE=93, G_GE=94, G_EQ=95, G_NE=96, G_LNOT=97, G_LAND=98,
		G_LOR=99, G_ADD_ASSIGN=100, G_SUB_ASSIGN=101, G_MUL_ASSIGN=102, G_DIV_ASSIGN=103,
		G_MOD_ASSIGN=104, G_WHITE_SPACE=105, G_BLOCK_COMMENT=106, G_LINE_COMMENT=107;
	public static final int
		RULE_schema = 0, RULE_schemaCoreNode = 1, RULE_titleNode = 2, RULE_versionNode = 3,
		RULE_importNode = 4, RULE_pragmaNode = 5, RULE_defineNode = 6, RULE_validatorNode = 7,
		RULE_validatorMainNode = 8, RULE_aliasNode = 9, RULE_valueNode = 10, RULE_receiverNode = 11,
		RULE_objectNode = 12, RULE_propertyNode = 13, RULE_arrayNode = 14, RULE_datatypeNode = 15,
		RULE_functionNode = 16, RULE_argumentNode = 17, RULE_primitiveNode = 18,
		RULE_scriptNode = 19, RULE_globalStatement = 20, RULE_statement = 21,
		RULE_functionDeclaration = 22, RULE_varStatement = 23, RULE_varDeclaration = 24,
		RULE_expressionStatement = 25, RULE_ifStatement = 26, RULE_whileStatement = 27,
		RULE_forStatement = 28, RULE_expressionList = 29, RULE_foreachStatement = 30,
		RULE_returnStatement = 31, RULE_breakStatement = 32, RULE_blockStatement = 33,
		RULE_expression = 34, RULE_literal = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"schema", "schemaCoreNode", "titleNode", "versionNode", "importNode",
			"pragmaNode", "defineNode", "validatorNode", "validatorMainNode", "aliasNode",
			"valueNode", "receiverNode", "objectNode", "propertyNode", "arrayNode",
			"datatypeNode", "functionNode", "argumentNode", "primitiveNode", "scriptNode",
			"globalStatement", "statement", "functionDeclaration", "varStatement",
			"varDeclaration", "expressionStatement", "ifStatement", "whileStatement",
			"forStatement", "expressionList", "foreachStatement", "returnStatement",
			"breakStatement", "blockStatement", "expression", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%title'", "'%version'", "'%import'", "'%pragma'", null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, "'?'", null, null, null, null, null, null, null, null, null, null,
			null, null, null, "'var'", "'if'", "'else'", "'while'", "'for'", "'foreach'",
			"'in'", "'break'", "'constraint'", "'target'", "'caller'", "'subroutine'",
			"'tryof'", "'throw'", "'function'", "'return'", "'future'", null, null,
			null, "'undefined'", "'this'", "'new'", "'continue'", "'do'", "'const'",
			"'switch'", "'case'", "'import'", "'class'", "'super'", "'default'",
			"'not'", null, null, null, null, null, null, null, null, null, null,
			"';'", null, "'.'", null, "'..'", "'...'", "'='", "'++'", "'--'", "'+'",
			"'-'", null, "'/'", "'%'", "'>'", "'<'", "'<='", "'>='", "'=='", "'!='",
			null, "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", "'%='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "S_TITLE", "S_VERSION", "S_IMPORT", "S_PRAGMA", "S_DEFINE", "S_SCHEMA",
			"S_SCRIPT", "S_TRUE", "S_FALSE", "S_NULL", "S_COLON", "S_COMMA", "S_STAR",
			"S_LBRACE", "S_RBRACE", "S_LBRACKET", "S_RBRACKET", "S_LPAREN", "S_RPAREN",
			"S_OPTIONAL", "S_UNDEFINED", "S_GENERAL_ID", "S_ALIAS", "S_DATATYPE",
			"S_FUNCTION", "S_RECEIVER", "S_STRING", "S_INTEGER", "S_FLOAT", "S_DOUBLE",
			"S_WHITE_SPACE", "S_BLOCK_COMMENT", "S_LINE_COMMENT", "G_VAR", "G_IF",
			"G_ELSE", "G_WHILE", "G_FOR", "G_FOREACH", "G_IN", "G_BREAK", "G_CONSTRAINT",
			"G_TARGET", "G_CALLER", "G_SUBROUTINE", "G_TRYOF", "G_THROW", "G_FUNCTION",
			"G_RETURN", "G_FUTURE", "G_TRUE", "G_FALSE", "G_NULL", "G_UNDEFINED",
			"G_THIS", "G_NEW", "G_CONTINUE", "G_DO", "G_CONST", "G_SWITCH", "G_CASE",
			"G_IMPORT", "G_CLASS", "G_SUPER", "G_DEFAULT", "G_NOT", "G_INTEGER",
			"G_DOUBLE", "G_STRING", "G_IDENTIFIER", "G_LBRACE", "G_RBRACE", "G_LBRACKET",
			"G_RBRACKET", "G_LPAREN", "G_RPAREN", "G_SEMI", "G_COMMA", "G_DOT", "G_COLON",
			"G_RANGE", "G_ELLIPSIS", "G_ASSIGN", "G_INC", "G_DEC", "G_PLUS", "G_MINUS",
			"G_MUL", "G_DIV", "G_MOD", "G_GT", "G_LT", "G_LE", "G_GE", "G_EQ", "G_NE",
			"G_LNOT", "G_LAND", "G_LOR", "G_ADD_ASSIGN", "G_SUB_ASSIGN", "G_MUL_ASSIGN",
			"G_DIV_ASSIGN", "G_MOD_ASSIGN", "G_WHITE_SPACE", "G_BLOCK_COMMENT", "G_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SchemaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SchemaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaContext extends ParserRuleContext {
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }

		public SchemaContext() { }
		public void copyFrom(SchemaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompleteSchemaContext extends SchemaContext {
		public SchemaCoreNodeContext schemaCoreNode() {
			return getRuleContext(SchemaCoreNodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SchemaParser.EOF, 0); }
		public TitleNodeContext titleNode() {
			return getRuleContext(TitleNodeContext.class,0);
		}
		public VersionNodeContext versionNode() {
			return getRuleContext(VersionNodeContext.class,0);
		}
		public List<ImportNodeContext> importNode() {
			return getRuleContexts(ImportNodeContext.class);
		}
		public ImportNodeContext importNode(int i) {
			return getRuleContext(ImportNodeContext.class,i);
		}
		public List<PragmaNodeContext> pragmaNode() {
			return getRuleContexts(PragmaNodeContext.class);
		}
		public PragmaNodeContext pragmaNode(int i) {
			return getRuleContext(PragmaNodeContext.class,i);
		}
		public List<DefineNodeContext> defineNode() {
			return getRuleContexts(DefineNodeContext.class);
		}
		public DefineNodeContext defineNode(int i) {
			return getRuleContext(DefineNodeContext.class,i);
		}
		public List<ScriptNodeContext> scriptNode() {
			return getRuleContexts(ScriptNodeContext.class);
		}
		public ScriptNodeContext scriptNode(int i) {
			return getRuleContext(ScriptNodeContext.class,i);
		}
		public CompleteSchemaContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitCompleteSchema(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ShortSchemaContext extends SchemaContext {
		public ValidatorNodeContext validatorNode() {
			return getRuleContext(ValidatorNodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SchemaParser.EOF, 0); }
		public ShortSchemaContext(SchemaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitShortSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case S_TITLE:
			case S_VERSION:
			case S_IMPORT:
			case S_PRAGMA:
			case S_DEFINE:
			case S_SCHEMA:
			case S_SCRIPT:
				_localctx = new CompleteSchemaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==S_TITLE) {
					{
					setState(72);
					titleNode();
					}
				}

				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==S_VERSION) {
					{
					setState(75);
					versionNode();
					}
				}

				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==S_IMPORT || _la==S_PRAGMA) {
					{
					setState(80);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case S_IMPORT:
						{
						setState(78);
						importNode();
						}
						break;
					case S_PRAGMA:
						{
						setState(79);
						pragmaNode();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==S_DEFINE || _la==S_SCRIPT) {
					{
					setState(87);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case S_DEFINE:
						{
						setState(85);
						defineNode();
						}
						break;
					case S_SCRIPT:
						{
						setState(86);
						scriptNode();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92);
				schemaCoreNode();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==S_DEFINE || _la==S_SCRIPT) {
					{
					setState(95);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case S_DEFINE:
						{
						setState(93);
						defineNode();
						}
						break;
					case S_SCRIPT:
						{
						setState(94);
						scriptNode();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(EOF);
				}
				break;
			case S_TRUE:
			case S_FALSE:
			case S_NULL:
			case S_LBRACE:
			case S_LBRACKET:
			case S_UNDEFINED:
			case S_ALIAS:
			case S_DATATYPE:
			case S_FUNCTION:
			case S_STRING:
			case S_INTEGER:
			case S_FLOAT:
			case S_DOUBLE:
				_localctx = new ShortSchemaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				validatorNode();
				setState(103);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemaCoreNodeContext extends ParserRuleContext {
		public TerminalNode S_SCHEMA() { return getToken(SchemaParser.S_SCHEMA, 0); }
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public ValidatorNodeContext validatorNode() {
			return getRuleContext(ValidatorNodeContext.class,0);
		}
		public SchemaCoreNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaCoreNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitSchemaCoreNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaCoreNodeContext schemaCoreNode() throws RecognitionException {
		SchemaCoreNodeContext _localctx = new SchemaCoreNodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_schemaCoreNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(S_SCHEMA);
			setState(108);
			match(S_COLON);
			setState(109);
			validatorNode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleNodeContext extends ParserRuleContext {
		public TerminalNode S_TITLE() { return getToken(SchemaParser.S_TITLE, 0); }
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public TerminalNode S_STRING() { return getToken(SchemaParser.S_STRING, 0); }
		public TitleNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titleNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitTitleNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleNodeContext titleNode() throws RecognitionException {
		TitleNodeContext _localctx = new TitleNodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_titleNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(S_TITLE);
			setState(112);
			match(S_COLON);
			setState(113);
			match(S_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionNodeContext extends ParserRuleContext {
		public TerminalNode S_VERSION() { return getToken(SchemaParser.S_VERSION, 0); }
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public TerminalNode S_STRING() { return getToken(SchemaParser.S_STRING, 0); }
		public VersionNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitVersionNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionNodeContext versionNode() throws RecognitionException {
		VersionNodeContext _localctx = new VersionNodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_versionNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(S_VERSION);
			setState(116);
			match(S_COLON);
			setState(117);
			match(S_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNodeContext extends ParserRuleContext {
		public TerminalNode S_IMPORT() { return getToken(SchemaParser.S_IMPORT, 0); }
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public List<TerminalNode> S_GENERAL_ID() { return getTokens(SchemaParser.S_GENERAL_ID); }
		public TerminalNode S_GENERAL_ID(int i) {
			return getToken(SchemaParser.S_GENERAL_ID, i);
		}
		public TerminalNode S_COMMA() { return getToken(SchemaParser.S_COMMA, 0); }
		public ImportNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitImportNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNodeContext importNode() throws RecognitionException {
		ImportNodeContext _localctx = new ImportNodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importNode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(S_IMPORT);
			setState(120);
			match(S_COLON);
			setState(121);
			match(S_GENERAL_ID);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==S_COMMA) {
				{
				setState(122);
				match(S_COMMA);
				setState(123);
				match(S_GENERAL_ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PragmaNodeContext extends ParserRuleContext {
		public TerminalNode S_PRAGMA() { return getToken(SchemaParser.S_PRAGMA, 0); }
		public TerminalNode S_GENERAL_ID() { return getToken(SchemaParser.S_GENERAL_ID, 0); }
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public PrimitiveNodeContext primitiveNode() {
			return getRuleContext(PrimitiveNodeContext.class,0);
		}
		public PragmaNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pragmaNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitPragmaNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PragmaNodeContext pragmaNode() throws RecognitionException {
		PragmaNodeContext _localctx = new PragmaNodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pragmaNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(S_PRAGMA);
			setState(127);
			match(S_GENERAL_ID);
			setState(128);
			match(S_COLON);
			setState(129);
			primitiveNode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineNodeContext extends ParserRuleContext {
		public TerminalNode S_DEFINE() { return getToken(SchemaParser.S_DEFINE, 0); }
		public AliasNodeContext aliasNode() {
			return getRuleContext(AliasNodeContext.class,0);
		}
		public TerminalNode S_COLON() { return getToken(SchemaParser.S_COLON, 0); }
		public ValidatorMainNodeContext validatorMainNode() {
			return getRuleContext(ValidatorMainNodeContext.class,0);
		}
		public DefineNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitDefineNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineNodeContext defineNode() throws RecognitionException {
		DefineNodeContext _localctx = new DefineNodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defineNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(S_DEFINE);
			setState(132);
			aliasNode();
			setState(133);
			match(S_COLON);
			setState(134);
			validatorMainNode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValidatorNodeContext extends ParserRuleContext {
		public ValidatorMainNodeContext validatorMainNode() {
			return getRuleContext(ValidatorMainNodeContext.class,0);
		}
		public AliasNodeContext aliasNode() {
			return getRuleContext(AliasNodeContext.class,0);
		}
		public ValidatorNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validatorNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitValidatorNode(this);
			else return visitor.visitChildren(this);
		}
	}
